--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ignorado.txt
 .vs/slnx.sqlite
+*.exe
 # Created by https://www.toptal.com/developers/gitignore/api/git,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,visualstudio
 
